# VociePlayer

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
src/: app.rs  audio.rs  config.rs  hotkeys.rs  main.rs  platform.rs  profile.rs
