[package]
name = "vocieplayer"
version = "0.0.2"
edition = "2021"
description = "轻量级 Windows 声卡音效热键工具（类 Soundpad）"
license = "MIT"
repository = "https://github.com/muzi-xiaoren/VociePlayer"

[dependencies]
eframe = "0.29"
egui = "0.29"
rodio = { version = "0.19", features = ["symphonia-all"] }
cpal = "0.15"
global-hotkey = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
rfd = "0.15"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

# 体积优先的 release 配置：strip + LTO + 最小体积优化
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
